# short_link

./: .env  Cargo.toml  README.md  Settings.toml
src/: auth.rs  handlers.rs  main.rs  models.rs  repository.rs
static/: 404.html
