[package]
name = "short_link"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
utoipa-swagger-ui = { version = "3", features = ["actix-web"] }
env_logger = "0.10.0"
dotenv = "0.15.0"
uuid = { version = "1.4.1", features = ["serde", "v4"] }
sqlx = { version = "0.7", features = [ "runtime-async-std", "postgres", "chrono", "uuid" ] }
actix-cors = "0.6.4"
actix-web-httpauth = "0.8.0"
once_cell = "1.18.0"
log = { version = "0.4.20", features = [] }
config = "0.13.3"
